--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".AccountActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout10"
@@ -69,7 +69,7 @@
                 style="@style/button14_style" />
 
             <ImageButton
-                android:id="@+id/imageButton3"
+                android:id="@+id/back"
                 style="@style/imagebutton2_style"
                 android:layout_marginTop="30dp"
                 android:layout_marginEnd="160dp"
