--- a/app/src/main/res/layout/activity_basket.xml
+++ b/app/src/main/res/layout/activity_basket.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".basket">
+    tools:context=".BasketActivity">
 
 
     <ImageView
@@ -18,7 +18,7 @@
     <LinearLayout
         android:id="@+id/linearLayout6"
         style="@style/linearlayout4_style"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
+        app:layout_constraintBottom_toTopOf="@+id/back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView13">
@@ -242,7 +242,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button12"
+        android:id="@+id/buy"
         style="@style/button17_style"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -250,7 +250,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />
 
     <ImageButton
-        android:id="@+id/imageButton4"
+        android:id="@+id/back"
         style="@style/imagebutton2_style"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="10dp"
