--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".menu">
+    tools:context=".MenuActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -66,7 +66,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView16"
+                android:id="@+id/basket"
                 style="@style/imageview11_style"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="250dp" />
@@ -89,7 +89,7 @@
                     tools:layout_editor_absoluteY="584dp" />
 
                 <ImageView
-                    android:id="@+id/imageView8"
+                    android:id="@+id/account"
                     style="@style/imageview5_style"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" />
