--- a/app/src/main/res/layout/activity_pay.xml
+++ b/app/src/main/res/layout/activity_pay.xml
@@ -94,7 +94,7 @@
             tools:layout_editor_absoluteY="506dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/constraintLayout5555"
+                android:id="@+id/card"
                 style="@style/constlayout9_style">
 
                 <androidx.cardview.widget.CardView
@@ -112,7 +112,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/constraintLayout5"
+                android:id="@+id/cash"
                 style="@style/constlayout9_style">
 
                 <androidx.cardview.widget.CardView
@@ -133,7 +133,7 @@
 
 
         <ImageButton
-            android:id="@+id/imageButton2"
+            android:id="@+id/back"
             style="@style/imagebutton2_style"
             android:backgroundTint="@color/white"
             android:layout_marginEnd="160dp"
